--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -62,22 +62,14 @@ dependencies {
     implementation 'com.android.support:cardview-v7:30.0.0'
     implementation 'com.youth.banner:banner:2.1.0'
 
-//    compile 'com.umeng.umsdk:common:9.4.0'//必选
-//    compile 'com.umeng.umsdk:asms:1.2.3'//必选
-//    compile 'com.umeng.umsdk:link:1.1.0'//集成U-Link，可选，如要统计分享回流次数和分享新增用户指标则必选
-//    implementation 'com.umeng.umsdk:share-core:7.1.5'//分享核心库，必选
-//    implementation 'com.umeng.umsdk:share-board:7.1.5'//分享面板功能，可选
-
-    implementation 'com.umeng.umsdk:share-wx:7.1.5' //微信完整版
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.7.0'//微信官方依赖库，必选
+//    implementation(name:'umeng-abtest-v1.0.0.aar', ext:'aar')
 //
-//    implementation 'com.umeng.umsdk:share-qq:7.1.5'//QQ完整版
-//    implementation 'com.tencent.tauth:qqopensdk:3.53.0'//QQ官方依赖库，必选
-//    implementation 'com.squareup.okhttp3:okhttp:3.12.12'//QQ SDK在3.53.0版本及以上时需要集成okhttp官方依赖库，必选
-//
-//    implementation 'com.umeng.umsdk:share-dingding:7.1.5'//钉钉完整版
-//    implementation "com.alibaba.android:ddsharesdk:1.2.0@jar"//钉钉官方依赖库，必选
-//    implementation 'com.umeng.umsdk:share-alipay:7.1.5'//支付宝完整版
+//    //新浪官方依赖库
+//    implementation(name:'openDefault-10.10.0', ext:'aar')
+    //QQ官方依赖库
+    implementation 'com.tencent.tauth:qqopensdk:3.53.0'
+    //微信官方依赖库
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.7.9'
 
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     //环信
