--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -41,6 +43,7 @@ dependencies {
     implementation project(path: ':csiizxing')
     implementation project(path: ':ocrsdkproject')
     implementation project(path: ':wheelview')
+    implementation files('libs\\Msc.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -49,8 +52,8 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.android.support:design:30.0.0'
     //	侧滑菜单 /TabLayout /RecyclerView
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'        //	异步加载图片
+//    implementation 'com.github.bumptech.glide:glide:4.11.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'        //	异步加载图片
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'            //	retrofit 库
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'            //	converter-gson /解析转换器
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'            //	配合Rxjava 使用
@@ -63,7 +66,6 @@ dependencies {
     implementation 'com.youth.banner:banner:2.1.0'
 
 //    implementation(name:'umeng-abtest-v1.0.0.aar', ext:'aar')
-//
 //    //新浪官方依赖库
 //    implementation(name:'openDefault-10.10.0', ext:'aar')
     //QQ官方依赖库
@@ -78,5 +80,7 @@ dependencies {
     //compile 'com.github.bumptech.glide:glide:4.7.1' //其他版本也可以
     //EaseUI中，fragment用到了android-support-v4包
     implementation 'com.android.support:support-v4:23.1.1' //其他版本也可以
+
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
 
 }
