--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://repo1.maven.org/maven2/' }
+        maven { url 'https://jitpack.io' }
+
     }
 }
 
