--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,14 @@ dependencies {
     implementation project(path: ':ocrsdkproject')
     implementation project(path: ':wheelview')
     implementation files('libs\\Msc.jar')
+    implementation project(path: ':screenShotEdit')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //pdf
-    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    //implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.android.support:design:30.0.0'
     //	侧滑菜单 /TabLayout /RecyclerView
 //    implementation 'com.github.bumptech.glide:glide:4.11.0'
